[package]
name = "baby-pool"
version = "0.2.0"
authors = ["raykast <rookie1286@gmail.com>"]
edition = "2021"
description = "A miniscule thread pool built on crossbeam's scheduler"
documentation = "https://docs.rs/baby-pool/"
# readme = TODO
# homepage = TODO
repository = "https://github.com/ray-kast/baby-pool"
license = "MIT OR Apache-2.0"
# license-file =
keywords = ["concurrency", "parallel", "thread", "scheduler", "scheduling"]
categories = ["algorithms", "concurrency", "rust-patterns"]

[dependencies]
crossbeam = "0.8.1"
dispose = "0.3.1"
log = "0.4.14"
num_cpus = "1.13.0"
parking_lot = "0.11.2"
