[package]
name = "topograph"
version = "0.3.1-alpha.1"
authors = ["raykast <rookie1286@gmail.com>"]
edition = "2021"
description = "A miniscule thread pool and toposort scheduler"
documentation = "https://docs.rs/topograph/"
# readme = TODO
# homepage = TODO
repository = "https://github.com/ray-kast/topograph"
license = "MIT OR Apache-2.0"
# license-file =
keywords = ["concurrency", "parallel", "thread", "scheduler", "scheduling"]
categories = ["algorithms", "concurrency", "rust-patterns"]

[dependencies]
crossbeam = "0.8.1"
dispose = "0.4.0"
log = "0.4.14"
num_cpus = "1.13.0"
parking_lot = "0.11.2"
thiserror = "1.0.30"
