[package]
name = "topograph"
version = "0.4.0"
authors = ["raykast <rookie1286@gmail.com>"]
edition = "2021"
description = "A miniscule thread pool and toposort scheduler"
documentation = "https://docs.rs/topograph/"
# readme = TODO
# homepage = TODO
repository = "https://github.com/ray-kast/topograph"
license = "MIT OR Apache-2.0"
# license-file =
keywords = ["concurrency", "parallel", "thread", "scheduler", "scheduling"]
categories = ["algorithms", "concurrency", "rust-patterns"]

[dependencies]
crossbeam = "0.8.1"
dispose = "0.5.1"
futures-util = "0.3.30"
log = "0.4.14"
num_cpus = "1.13.0"
parking_lot = "0.11.2"
pin-project = "1.1.5"
thiserror = "1.0.30"
tokio = { version = "1.37.0", default-features = false, optional = true, features = ["rt"] }

[features]
tokio = ["dep:tokio"]
